HISTORY

  Version 4.4.0  2010-09-
  ------------------------------------------------------------------------------
    RC2:
    - history of typed commands added to the boot time interactive mode;
      navigation is possible by arrow keys, 'history' command can be used
      to list all typed commands
    - clearing of the failed boot flag added for reboot and shutdown at boot time
    - pending boot-off boot time script command support added,
      this removes the limitation of boot-on/off not working before reboot/shutdown
    - interactive mode at boot time now displays help split into pages
    - escape key handling added to break the boot time script execution
    - winx_kb_read(), winx_xtime(), winx_prompt_ex(),
      winx_print_array_of_strings() calls added to zenwinx library
    - corrected cluttered progress display if console output was redirected
    - optimized timeout for waiting for a keyboard event
    - the following translations were updated:

      Portuguese, 
    RC1:
    - partial defragmentation was added to decrease number of fragments
      even when there are no free space on disk
      to hold all fragments of file together
    - volume optimization algorithm was improved to prevent useless
      additional optimization passes
    - one little bug preventing optimization from being stopped was fixed
      in driver
    - volume optimization algorithm was improved to prevent skipping
      heavily fragmented parts of the processed volume
    - progress is now added to the GUI window caption,
      so it is displayed in the tooltip of the taskbar icon
    - cryptic single character progress label was replaced
      by the localized operation names
    - file system type detection was rewritten to be more reliable
      and detect UDF-formatted volumes properly
    - fixed a problem where the case of the names of the help pages
      launched from the configuration dialog did not match