@@ -43,4 +43,8 @@
    which must be reduced by two rows for the prompt */
 #define HELP_DISPLAY_ROWS 22
 
+/* define how many characters may be
+   printed on line after a prompt */
+#define MAX_LINE_WIDTH 60
+
 #endif /* _DEFRAG_NATIVE_H_ */
